--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -6,7 +6,34 @@
     height: 300px;
     overflow-y: scroll;
 }
-.modal-body>#command{
+.modal-body>#command
+{
     min-height: 100px;
     height: fit-content;
 }
+
+
+.custom-loader {
+    position: fixed;
+    left: 52%;
+    top:60%;
+    z-index: 9999 !important;
+    --d:22px;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    color: #60F421;
+    box-shadow:
+      calc(1*var(--d))      calc(0*var(--d))     0 0,
+      calc(0.707*var(--d))  calc(0.707*var(--d)) 0 1px,
+      calc(0*var(--d))      calc(1*var(--d))     0 2px,
+      calc(-0.707*var(--d)) calc(0.707*var(--d)) 0 3px,
+      calc(-1*var(--d))     calc(0*var(--d))     0 4px,
+      calc(-0.707*var(--d)) calc(-0.707*var(--d))0 5px,
+      calc(0*var(--d))      calc(-1*var(--d))    0 6px;
+    animation: s7 1s infinite steps(8);
+  }
+
+  @keyframes s7 {
+    100% {transform: rotate(1turn)}
+  }
